--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,18 @@
+/* Styling for general ids/classes */
 * {
     box-sizing: border-box;
 }
 
-/* Styling for general ids/classes */
 html,
 body,
-#container {
+button {
     background-color: #e0d3df;
-    font-family: Georgia, sans-serif;
-}
-
-span {
-    text-decoration: underline;
-    color: rgb(55, 18, 190);
-    cursor: pointer;
+    font-family: Verdana, sans-serif, sans-serif, sans-serif;
 }
 
 .page {
-    margin: 100px;
-    flex: 1 0 50%;
+    margin: 50px;
+    flex: 0 1;
     text-align: center;
 }
 
@@ -30,14 +24,12 @@ span {
     max-width: 100%;
 }
 
-
 /* Page: WELCOME */
 #welcome {
     margin-top: 50px;
     text-align: center;
     width: 100%;
 }
-
 
 /* Page: OTHER */
 #cat-gifs {
@@ -52,29 +44,13 @@ span {
     margin-bottom: 2px;
 }
 
-.question {
-    border: 2px solid purple;
-    padding: 4px;
-    border-radius: 20px;
-    margin-bottom: 4px;
-}
-
-.question:hover {
-    cursor: pointer;
-    background-color: purple;
-}
-
-.jokes {
-    text-align: center;
-    color: black;
-
-}
-
 .answer {
-    border: 2px;
-    padding: 4px;
-    border-radius: 1px;
-    margin-bottom: 4px;
+    margin-left: auto;
+    margin-right: auto;
+    /* padding-left: auto; */
+    width: 70%;
+    padding-top: 0.5%;
+    padding-bottom: 0.5%;
     background-color: purple;
 }
 
@@ -85,13 +61,13 @@ span {
 #answer-text {
     text-align: center;
     color: pink;
+    margin: auto;
 }
 
 #clear-joke-text {
     text-align: center;
     color: purple;
 }
-
 
 /* Styling to add text layer over gifs/images with hover */
 .img__wrap {
@@ -105,10 +81,9 @@ span {
 
 .img__description_layer {
     position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
+    top: 5;
+    left: 5;
+    right: 5;
     background: rgba(160, 41, 209, 0.6);
     color: #fff;
     visibility: hidden;
@@ -118,22 +93,24 @@ span {
     justify-content: center;
 }
 
-.img__wrap:hover .img__description_layer {
+.img__wrap:hover .img__description_layer,
+.active {
     visibility: visible;
     opacity: 1;
     cursor: pointer;
+    padding: 10px 20px;
 }
 
 .img__description {
     transition: .5s;
     transform: translateY(1em);
     text-align: center;
+    font-size: 95%;
 }
 
 .img__wrap:hover .img__description {
     transform: translateY(0);
 }
-
 
 /* Styling for zoom lens in images */
 .img-magnifier-container {
@@ -147,10 +124,81 @@ span {
 
 .img-magnifier-glass {
     position: absolute;
-    border: 3px solid #424040;
+    border: 3px solid purple;
     border-radius: 50%;
     cursor: pointer;
     /*Set the size of the magnifier glass:*/
     width: 100px;
     height: 100px;
+}
+
+/* Styling for gallery */
+.gallery_row {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    padding: 0 4px;
+}
+
+/* Create two equal columns that sits next to each other */
+#gallery_Header {
+    text-align: right;
+    font-size: 80%;
+}
+
+.gallery_col {
+    -ms-flex: 50%;
+    flex: 50%;
+    padding: 0 4px;
+}
+
+.gallery_col img {
+    margin-top: 8px;
+    vertical-align: middle;
+}
+
+.gallery_btn {
+    border: none;
+    outline: none;
+    padding: 5px 10px;
+    background-color: rgb(167, 155, 167);
+    cursor: pointer;
+    color: white;
+}
+
+.gallery_btn:hover {
+    background-color: rgb(189, 74, 189);
+}
+
+.gallery_btn.gallery_active {
+    background-color: purple;
+    color: white;
+}
+
+/* Create buttons for pages */
+#page_Header {
+    text-align: center;
+
+}
+
+.page_btn {
+    border: none;
+    outline: none;
+    padding: 15px 80px;
+    background-color: #e0d3df;
+    cursor: pointer;
+    font-size: 100%;
+}
+
+.page_btn:hover {
+    background-color: rgb(233, 247, 200);
+    border: 40px rgb(201, 247, 94);
+    border-radius: 50%;
+}
+
+.page_btn.page_active {
+    background-color: rgb(201, 247, 94);
+    border-radius: 50%;
+    color: black;
 }
